Messages.View: Fix overflowing text

--- a/src/styles/components/_messenger.scss
+++ b/src/styles/components/_messenger.scss
@@ -153,6 +153,7 @@
   .Messenger-messageText {
     margin-bottom: 0;
     line-height: 1.4;
+    word-break: break-all;
   }
 
   .Messenger-messageMeta {
